# marketprod

./: .dockerignore  .gitignore  DM-CA.crt  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
conf/: nginx.conf
repricer/: admin.py  forms.py  models.py  urls.py  views.py
repricer/migrations/: 0001_initial.py  0002_alter_monitorids_nmid.py  0003_monitorids_article.py  0004_remove_monitorids_article.py  0005_alter_monitorids_options.py
repricer/templates/repricer/: index.html  index2.html  monitorids_detail.html  monitorids_list.html
repricer/templates/repricer/common/: footer-common.html
settings/: celery.py  settings.py  urls.py
templates/: base.html  index.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/registration/: login.html  logout.html
