[tool.poetry]
name = "marketprod"
version = "0.1.0"
description = ""
authors = ["iBernin <berninivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
django-debug-toolbar = "^4.2.0"
celery = "^5.3.6"
psycopg2 = "^2.9.9"
mssql-django = "^1.4"
pyodbc = "^5.0.1"
pyyaml = "^6.0.1"
gunicorn = "^21.2.0"
black = "^24.1.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
